@@ -20,7 +20,7 @@
 // ==/UserScript==
 
 /*
- * 4chan x - Version 1.0.6 - 2013-04-13
+ * 4chan x - Version 1.0.6 - 2013-04-14
  *
  * Licensed under the MIT license.
  * https://github.com/seaweedchan/4chan-x/blob/master/LICENSE
@@ -105,7 +105,7 @@
  */
 
 (function() {
-  var $, $$, Anonymize, ArchiveLink, BanChecker, Build, CatalogLinks, Conf, Config, CustomNavigation, DeleteLink, DownloadLink, EmbedLink, Emoji, ExpandComment, ExpandThread, FappeTyme, Favicon, FileInfo, Filter, Get, IDColor, ImageExpand, ImageHover, ImageReplace, Keybinds, Linkify, Main, MarkOwn, Markdown, Menu, MutationObserver, Nav, Navigation, Options, Prefetch, QR, QuoteBacklink, QuoteCT, QuoteInline, QuoteOP, QuotePreview, Quotify, Redirect, RemoveSpoilers, ReplyHideLink, ReplyHiding, ReportLink, RevealSpoilers, Sauce, StrikethroughQuotes, Style, ThreadHideLink, ThreadHiding, ThreadStats, Time, TitlePost, UI, Unread, Updater, Watcher, d, g, userNavigation, _base,
+  var $, $$, Anonymize, ArchiveLink, BanChecker, Build, CatalogLinks, Conf, Config, CustomNavigation, DeleteLink, DownloadLink, EmbedLink, Emoji, ExpandComment, ExpandThread, FappeTyme, Favicon, FileInfo, Filter, Get, IDColor, ImageExpand, ImageHover, ImageReplace, Keybinds, Linkify, Main, MarkOwn, Markdown, Menu, MutationObserver, Nav, Navigation, Options, Prefetch, QR, QuoteBacklink, QuoteCT, QuoteInline, QuoteOP, QuotePreview, Quotify, Redirect, RelativeDates, RemoveSpoilers, ReplyHideLink, ReplyHiding, ReportLink, RevealSpoilers, Sauce, StrikethroughQuotes, Style, ThreadHideLink, ThreadHiding, ThreadStats, Time, TitlePost, UI, Unread, Updater, Watcher, d, g, userNavigation, _base,
     __slice = [].slice;
 
   Config = {
@@ -116,6 +116,7 @@
         '404 Redirect': [true, 'Redirect dead threads and images'],
         'Keybinds': [true, 'Binds actions to keys'],
         'Time Formatting': [true, 'Arbitrarily formatted timestamps, using your local time'],
+        'Relative Post Dates': [false, 'Display dates as "3 minutes ago" f.e., tooltip shows the timestamp'],
         'File Info Formatting': [true, 'Reformats the file information'],
         'Comment Expansion': [true, 'Expand too long comments'],
         'Thread Expansion': [true, 'View all replies'],
@@ -623,8 +624,20 @@
       size = unit > 1 ? Math.round(size * 100) / 100 : Math.round(size);
       return "" + size + " " + ['B', 'KB', 'MB', 'GB'][unit];
     },
-    hidden: function() {
-      return d.hidden || d.mozHidden || d.webkitHidden || d.oHidden;
+    debounce: function(wait, fn) {
+      var timeout;
+
+      timeout = null;
+      return function() {
+        if (timeout) {
+          clearTimeout(timeout);
+        } else {
+          fn.apply(this, arguments);
+        }
+        return timeout = setTimeout((function() {
+          return timeout = null;
+        }), wait);
+      };
     }
   });
 
@@ -2368,6 +2381,73 @@
         postID = postID.match(/\d+/)[0];
       }
       return base + "/" + board + "/" + (threadID ? "thread/" + threadID : "post/" + postID) + (threadID && postID ? "#" + (archiver === 'InstallGentoo' ? 'p' : '') + postID : "");
+    }
+  };
+
+  RelativeDates = {
+    INTERVAL: $.MINUTE,
+    init: function() {
+      Main.callbacks.push(this.node);
+      return $.on(d, 'visibilitychange', this.flush);
+    },
+    node: function(post) {
+      var dateEl, diff, utc;
+
+      dateEl = $('.postInfo > .dateTime', post.el);
+      dateEl.title = dateEl.textContent;
+      utc = dateEl.dataset.utc * 1000;
+      diff = Date.now() - utc;
+      dateEl.textContent = RelativeDates.relative(diff);
+      RelativeDates.setUpdate(dateEl, utc, diff);
+      return RelativeDates.flush();
+    },
+    relative: function(diff) {
+      var number, rounded, unit;
+
+      unit = (number = diff / $.DAY) > 1 ? 'day' : (number = diff / $.HOUR) > 1 ? 'hour' : (number = diff / $.MINUTE) > 1 ? 'minute' : (number = diff / $.SECOND, 'second');
+      rounded = Math.round(number);
+      if (rounded !== 1) {
+        unit += 's';
+      }
+      return "" + rounded + " " + unit + " ago";
+    },
+    stale: [],
+    flush: $.debounce($.SECOND, function() {
+      var now, update, _i, _len, _ref;
+
+      if (d.hidden) {
+        return;
+      }
+      now = Date.now();
+      _ref = RelativeDates.stale;
+      for (_i = 0, _len = _ref.length; _i < _len; _i++) {
+        update = _ref[_i];
+        update(now);
+      }
+      RelativeDates.stale = [];
+      clearTimeout(RelativeDates.timeout);
+      return RelativeDates.timeout = setTimeout(RelativeDates.flush, RelativeDates.INTERVAL);
+    }),
+    setUpdate: function(dateEl, utc, diff) {
+      var markStale, setOwnTimeout, update;
+
+      setOwnTimeout = function(diff) {
+        var delay;
+
+        delay = diff < $.MINUTE ? $.SECOND - (diff + $.SECOND / 2) % $.SECOND : diff < $.HOUR ? $.MINUTE - (diff + $.MINUTE / 2) % $.MINUTE : $.HOUR - (diff + $.HOUR / 2) % $.HOUR;
+        return setTimeout(markStale, delay);
+      };
+      update = function(now) {
+        if (d.contains(dateEl)) {
+          diff = now - utc;
+          dateEl.textContent = RelativeDates.relative(diff);
+          return setOwnTimeout(diff);
+        }
+      };
+      markStale = function() {
+        return RelativeDates.stale.push(update);
+      };
+      return setOwnTimeout(diff);
     }
   };
 
@@ -4604,7 +4684,7 @@
       }
     },
     scroll: function() {
-      if (!($.hidden() || Unread.replies === 0)) {
+      if (!(d.hidden || Unread.replies === 0)) {
         return Unread.count();
       }
     },
@@ -4754,7 +4834,7 @@
         return delete Updater.postID;
       },
       visibility: function() {
-        if ($.hidden()) {
+        if (d.hidden) {
           return;
         }
         Updater.unsuccessfulFetchCount = 0;
@@ -4791,7 +4871,7 @@
         return Updater.scrollBG = this.checked ? function() {
           return true;
         } : function() {
-          return !$.hidden();
+          return !d.hidden;
         };
       },
       load: function() {
@@ -4876,7 +4956,7 @@
           Updater.count.className = count ? 'new' : null;
         }
         if (count) {
-          if (Conf['Beep'] && $.hidden() && (Unread.replies.length === 0)) {
+          if (Conf['Beep'] && d.hidden && (Unread.replies.length === 0)) {
             Updater.audio.play();
           }
           Updater.unsuccessfulFetchCount = 0;
@@ -4926,7 +5006,7 @@
 
       string = "Interval" + (Conf['Interval per board'] ? "_" + g.BOARD : "");
       increaseString = "updateIncrease";
-      if ($.hidden()) {
+      if (d.hidden) {
         string = "BG" + string;
         increaseString += "B";
       }
@@ -5304,7 +5384,7 @@
       if (QR.captcha.isEnabled && /captcha|verification/i.test(QR.warning.textContent)) {
         $('[autocomplete]', QR.el).focus();
       }
-      if ($.hidden()) {
+      if (d.hidden) {
         return alert(QR.warning.textContent);
       }
     },
@@ -7170,10 +7250,27 @@
       settings = JSON.parse(localStorage.getItem('4chan-settings')) || {};
       settings.disableAll = true;
       localStorage.setItem('4chan-settings', JSON.stringify(settings));
+      Main.polyfill();
       if (g.CATALOG) {
         return $.ready(Main.catalog);
       } else {
         return Main.features();
+      }
+    },
+    polyfill: function() {
+      var event, prefix, property;
+
+      if (!('visibilityState' in document)) {
+        prefix = 'mozVisibilityState' in document ? 'moz' : 'webkitVisibilityState' in document ? 'webkit' : 'o';
+        property = prefix + 'VisibilityState';
+        event = prefix + 'visibilitychange';
+        d.visibilityState = d[property];
+        d.hidden = d.visibilityState === 'hidden';
+        return $.on(d, event, function() {
+          d.visibilityState = d[property];
+          d.hidden = d.visibilityState === 'hidden';
+          return $.event(d, new CustomEvent('visibilitychange'));
+        });
       }
     },
     catalog: function() {
@@ -7223,6 +7320,9 @@
       }
       if (_conf['Time Formatting']) {
         Time.init();
+      }
+      if (Conf['Relative Post Dates']) {
+        RelativeDates.init();
       }
       if (_conf['File Info Formatting']) {
         FileInfo.init();
